--- a/app/src/main/res/layout/fragment_editor_edit_item.xml
+++ b/app/src/main/res/layout/fragment_editor_edit_item.xml
@@ -60,5 +60,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Delete" />
+
+        <Button
+            android:id="@+id/btn_insertNext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="插入下一个" />
     </LinearLayout>
 </LinearLayout>
