--- a/app/src/main/res/layout/item_qna_item.xml
+++ b/app/src/main/res/layout/item_qna_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
   <TextView
@@ -10,12 +11,19 @@
       android:layout_height="wrap_content"
       android:text="Question"
       android:textSize="18sp"
+      android:maxLines="1"
       android:textStyle="bold|italic" />
 
   <TextView
       android:id="@+id/txt_answer"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="Answer" />
+      android:text="Answer"
+      android:maxLines="1" />
+
+  <include
+      layout="@layout/fragment_item_separator"
+      android:layout_width="match_parent"
+      android:layout_height="1dp"/>
 
 </LinearLayout>
